logs/Slang/chapter-7/unions/tagged/basic.sv.log
name: basic-tagged-union
description: Test basic tagged union support
should_fail: 0
tags: 7.3.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/basic.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/basic.sv:9:1: error: language feature not yet supported
union tagged {
^~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/basic.sv:15:7: error: language feature not yet supported
	un = tagged valid (10);
	     ^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/basic.sv:15:19: error: expected ';'
	un = tagged valid (10);
	                 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/basic.sv:15:20: error: expected statement
	un = tagged valid (10);
	                  ^
